apps/samba/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: samba-server
  annotations:
    metallb.io/allow-shared-ip: "shared-ip"
  labels:
    app: samba
    app.kubernetes.io/instance: samba-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: samba
    app.kubernetes.io/part-of: samba
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: samba
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: samba
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: samba
    protocol: TCP
    port: 445
    targetPort: 445
  type: LoadBalancer
  loadBalancerIP: 192.168.3.10
  internalTrafficPolicy: Cluster
  externalTrafficPolicy: Local
