apps/samba/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: samba-server
  namespace: sambda
  annotations:
  - flame.pawelmalak/type=application
  - flame.pawelmalak/name=Samba
  - flame.pawelmalak/url=https://samba.elposhox.dev
  - flame.pawelmalak/icon=kubernetes
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`samba.elposhox.dev`)
    services:
    - kind: Service
      name: samba-server
      port: 445
